[package]
name = "teaspoon"
version = "0.1.0"
edition = "2024"

license = "BSD-3-Clause"
authors = ["Andrea Corbellini <corbellini.andrea@gmail.com>"]
description = "An allocator for when all you have is a teaspoon of memory"
repository = "https://github.com/andreacorbellini/teaspoon"

keywords = ["memory", "allocator", "no-std"]
categories = ["memory-management", "no-std"]

[dependencies]
spin = { version = "0.12.1", default-features = false, features = ["mutex", "spin_mutex"] }

[dev-dependencies]
rand = { version = "0.10.1", default-features = false }

[features]
allocator-api = []
lazy = ["spin/lazy"]
